kustomize/overlays/dev/deploy-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeapp-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: time-app
        image: 654654314892.dkr.ecr.us-east-1.amazonaws.com/timeapp:1.1
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
