kustomize/overlays/dev/svc-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeapp-service
spec:
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
